# Implement-of-Many-Core-System

./: README.md
Gaussian_Blur_1/: Gaussian_Blur.cpp  Makefile  lena_GB
Gaussian_Blur_2/: Testbench.cpp
HW01/Gaussian_Blur_1/: Gaussian_Blur.cpp  Makefile
HW01/Gaussian_Blur_2/: CMakeLists.txt  Gaussian_Blur.cpp  Gaussian_Blur.h  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
HW02/: README.md
HW02/1/: CMakeLists.txt
HW02/2/: CMakeLists.txt  Gaussian_Blur.cpp  Gaussian_Blur.h  Testbench.cpp  Testbench.h  main.cpp
HW03/: README.md
HW03/TLM/: Gaussian_Blur.cpp  Gaussian_Blur.h  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
HW04/Gauss_B_tlm_bus/: Gaussian_Blur.cpp  MemoryMap.h  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
HW05/: README.md
HW05/non-splited/: Gaussian_Blur.cpp  Gaussian_Blur.h  System.h  Testbench.cpp  Testbench.h
HW05/splited/: Gaussian_Blur.cpp  Gaussian_Blur.h  Makefile  README.md  System.cpp  System.h  Testbench.cpp  Testbench.h
HW05/splited/stratus/: project.tcl
HW06/: README.md
HW06/Gaussian_Blur_riscv/: Makefile
HW06/basic-gaussian/: main  main.cpp
HW06/platform/: filter_def.h  gaussianFilter.h  main.cpp
HW07/: README.md
HW07/platform/: CMakeLists.txt
HW07/platform/test-hw7/: CMakeLists.txt  SobelFilter.h  gaussianFilter.h  main_multicore.cpp
HW07/sw/test-hw7/: Makefile  main  main.cpp
final_project/: README.md
final_project/platform/: CMakeLists.txt
final_project/platform/final_project/: CMakeLists.txt  SobelFilter_RS.h  filter_def.h  gaussianFilter.h
final_project/sw/final_project/: Makefile  main  main.cpp  out.h
midterm_project/: README.md  midterm demo.pptx
midterm_project/acc/: Gaussian_Blur.cpp  System.cpp  System.h  Testbench.cpp  Testbench.h
midterm_project/acc/stratus/: Makefile.prj
midterm_project/acc/stratus/bdw_work/objs/: System.d  main.d
midterm_project/acc/stratus/bdw_work/sims/: top_V_BASIC.v  top_V_DPA.v
midterm_project/acc/stratus/bdw_work/trace/: hls.Gaussian_Blur.BASIC.s.trace  hls.Gaussian_Blur.DPA.s.trace  sim.B.trace  sim.V_BASIC.s.trace  sim.V_BASIC.trace  sim.V_DPA.trace
midterm_project/acc/stratus/bdw_work/wrappers/: Gaussian_Blur_cosim.v  Gaussian_Blur_cycsim.cpp  Gaussian_Blur_sc_foreign.h  Gaussian_Blur_sc_wrap.cpp  Gaussian_Blur_trace.h  Gaussian_Blur_type_wrapper.cpp  Gaussian_Blur_type_wrapper.h  Gaussian_Blur_vlwrapper.v
midterm_project/acc/stratus/cachelib/: cachelib.bdl
midterm_project/unacc/: Testbench.cpp
midterm_project/unacc/stratus/: Makefile.prj
midterm_project/unacc/stratus/cachelib/: cachelib.bdl
(+1199 files in other folders)
